Add Edit Account functionality

--- a/AccountingSoftware/AccountingSoftware/View/ShowAccounts.xaml
+++ b/AccountingSoftware/AccountingSoftware/View/ShowAccounts.xaml
@@ -10,12 +10,17 @@
 
     <DataGrid x:Name="UserDataGrid">
         <DataGrid.Columns>
-            <DataGridTemplateColumn Header="Action">
+             <DataGridTemplateColumn Header="Action">
                 <DataGridTemplateColumn.CellTemplate>
                     <DataTemplate>
                         <Button Content="Remove" Click="RemoveButton_Click" />
+                    </DataTemplate>
+                </DataGridTemplateColumn.CellTemplate>
+            </DataGridTemplateColumn>
+            <DataGridTemplateColumn Header="Action">
+                <DataGridTemplateColumn.CellTemplate>
+                    <DataTemplate>
                         <Button Content="Edit" Click="EditButton_Click" />
-
                     </DataTemplate>
                 </DataGridTemplateColumn.CellTemplate>
             </DataGridTemplateColumn>
